--- a/index.html
+++ b/index.html
@@ -7,9 +7,7 @@
 </head>
 
 <body>
-  <script type="text/javascript" src="src/index.js"></script>
-
-  <h1>Hello World</h1>
+  <canvas id="mycanvas"></canvas>
 </body>
 
 </html>
